<resources>
    <string name="app_name">AmapaMe</string>
    <string name="hint_username_email">Username or e-mail</string>
    <string name="hint_password">Password</string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="txt_button_login">Sign In</string>
    <string name="txt_registration_screen">Don\'t have an account? Sign Up</string>
    <string name="login_failed">"Invalid Email or Password"</string>
    <string name="txt_register">Sign Up</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="txt_button_confirm">Confirm</string>
    <string name="txt_button_back">Go Back</string>
    <string name="passwords_are_not_the_same">Passwords are not the same</string>
    <string name="empty_field">empty field</string>
    <string name="txt_hello">Hello Victor,</string>
    <string name="txt_messenger">What are you looking for today?</string>
    <string name="txt_pet_wallet">Pet Wallet</string>
    <string name="txt_register_pet">Register Pet</string>
    <string name="txt_my_profile">My Profile</string>
    <string name="txt_my_pets">My Pets</string>
</resources>