<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Feed">

    <View
        android:id="@+id/view2"
        style="@style/ContainerComponents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/txt_hello"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/txt_messenger"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="170dp"
        android:layout_height="140dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btPetWallet"
        android:layout_width="168dp"
        android:layout_height="102dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:elevation="20dp"
        android:padding="15dp"
        android:text="@string/txt_pet_wallet"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/btRegisterPet"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btMyProfile"
        android:layout_width="168dp"
        android:layout_height="102dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:elevation="20dp"
        android:padding="15dp"
        android:text="@string/txt_my_profile"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/btMyPets"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btPetWallet"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btRegisterPet"
        android:layout_width="168dp"
        android:layout_height="102dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:elevation="20dp"
        android:padding="15dp"
        android:text="@string/txt_register_pet"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btMyPets"
        android:layout_width="168dp"
        android:layout_height="102dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:elevation="20dp"
        android:padding="15dp"
        android:text="@string/txt_my_pets"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btRegisterPet"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>